[package]
name = "lcm_gen"
version = "0.1.0"
authors = ["Anthony Deschamps <anthony.j.deschamps@gmail.com>"]
description = "Build dependency to invoke lcm-gen"
documentation = "https://github.com/adeschamps/lcm/tree/rust/lcm-rust/lcm-gen"
homepage = "https://github.com/adeschamps/lcm/tree/rust/lcm-rust/lcm-gen"
repository = "https://github.com/adeschamps/lcm/tree/rust/lcm-rust/lcm-gen"
license-file = "../../COPYING"
categories = ["api-bindings", "external-ffi-bindings", "encoding"]

[dependencies]
glob = "0.2"
