[package]
name = "lcm"
version = "0.1.0"
authors = ["Anthony Deschamps <anthony.j.deschamps@gmail.com>"]
build = "build.rs"
description = "Rust bindings for the LCM library"
documentation = "https://github.com/adeschamps/lcm/tree/rust/lcm-rust/lcm"
homepage = "https://github.com/adeschamps/lcm/tree/rust/lcm-rust/lcm"
repository = "https://github.com/adeschamps/lcm/tree/rust/lcm-rust/lcm"
license-file = "../../COPYING"
categories = ["api-bindings", "external-ffi-bindings", "encoding"]

[dependencies]
byteorder = "0.5"
log = "*"
time = "*"

[build-dependencies]
bindgen = "*"
