[package]
name = "lcm"
version = "0.2.0"
authors = ["Anthony Deschamps <anthony.j.deschamps@gmail.com>"]
description = "Rust bindings for the LCM library"
documentation = "https://docs.rs/crate/lcm"
homepage = "https://github.com/adeschamps/lcm/tree/rust/lcm-rust/lcm"
repository = "https://github.com/adeschamps/lcm/tree/rust/lcm-rust/lcm"
license-file = "../../COPYING"
categories = ["api-bindings", "external-ffi-bindings", "encoding"]

[dependencies]
byteorder = "0.5"
log = { version = "0.3", optional = true }
